docker-scripts/sabnzbd/sabnzbd.ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: sabnzbd
    namespace: sabnzbd
spec:
    rules:
        - host: sabnzbd.lan
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: sabnzbd
                            port:
                                number: 8080
